--- a/assets/css/bootstrap.css
+++ b/assets/css/bootstrap.css
@@ -8972,4 +8972,16 @@ a.text-dark:hover, a.text-dark:focus {
     border: 1px solid #ddd !important;
   }
 }
+ul li{
+  list-style: none;
+  
+}
+.services-border{
+  border-left: 3px solid;padding:10px; border-image: 
+          linear-gradient(
+          to bottom, 
+          #3399ff , 
+          #ff99cc
+          ) 1 100%;
+  }
 /*# sourceMappingURL=bootstrap.css.map */
