--- a/templates/company.html
+++ b/templates/company.html
@@ -6,13 +6,17 @@
 <html>
 <!--<![endif]-->
 {% load static %}
+
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-	<meta name="title"  content="Retail and Retail Security | Automotive | Customized solutions">
-	<meta name="description" content="Retail Analysis, Automating Product Safety, Customized solutions through Solving scale’s AI-powered solutions, focuses on making machines intelligent and capable of solving problems.">
-<meta name="keywords" content="face recognition, object detection, retail ai, ai in retail, online tailoring, visual trial room, unusual activity in stores, stores, crowd management, retail stores, security in retail, security in stores, security in malls, theft monitoring, product security, product monitoring, security">
+	<meta name="title" content="Retail and Retail Security | Automotive | Customized solutions">
+	<meta name="description"
+		content="Retail Analysis, Automating Product Safety, Customized solutions through Solving scale’s AI-powered solutions, focuses on making machines intelligent and capable of solving problems.">
+	<meta name="keywords"
+		content="face recognition, object detection, retail ai, ai in retail, online tailoring, visual trial room, unusual activity in stores, stores, crowd management, retail stores, security in retail, security in stores, security in malls, theft monitoring, product security, product monitoring, security">
 	<meta name="author" content="SolvingScaleAI">
-
+	<link rel="stylesheet" href="{%static '/css/aos.css'%}">
+	<script></script>
 	<title>Solving Scale AI</title>
 
 	<!-- Mobile Specific Meta
@@ -26,43 +30,69 @@
 	<!-- CSS
   ================================================== -->
 	<!-- Themefisher Icon font -->
-	<link rel="stylesheet" href="{%static '/plugins/themefisher-font/style.css'%}">
+	<!-- <link rel="stylesheet" href="{%static '/plugins/themefisher-font/style.css'%}"> -->
 	<!-- bootstrap.min css -->
-	<link rel="stylesheet" href="{%static '/plugins/bootstrap/css/bootstrap.min.css'%}">
-	<!-- Lightbox.min css -->
-	<link rel="stylesheet" href="{%static '/plugins/lightbox2/dist/css/lightbox.min.css'%}">
-	<!-- animation css -->
-	<link rel="stylesheet" href="{%static '/plugins/animate/animate.css'%}">
-	<!-- Slick Carousel -->
-	<link rel="stylesheet" href="{%static '/plugins/slick/slick.css'%}">
-	<!-- Main Stylesheet -->
 	<link rel="stylesheet" href="{%static '/css/style.css'%}">
+	<!-- Lightbox.min css -->
+	<!-- <link rel="stylesheet" href="{%static '/plugins/lightbox2/dist/css/lightbox.min.css'%}"> -->
+	<!-- animation css -->
+	<!-- <link rel="stylesheet" href="{%static '/plugins/animate/animate.css'%}"> -->
+	<!-- Slick Carousel -->
+	<!-- <link rel="stylesheet" href="{%static '/plugins/slick/slick.css'%}"> -->
+	<!-- Main Stylesheet -->
 	<!-- font icon -->
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 	
+	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="{%static '/css/bootstrap.css'%}">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-LVV5M06YY7"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-LVV5M06YY7"></script>
 
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+	<script>
+		window.dataLayer = window.dataLayer || [];
 
-  gtag('config', 'G-LVV5M06YY7');
-</script>
-<style>
-	.navbar {
-        position: fixed;
-        z-index: 1000;
-        left: 0;
-        right: 0;
-        padding: 0px;
+		function gtag() {
+			dataLayer.push(arguments);
+		}
+		gtag('js', new Date());
 
-    }
-    .navbar-brand{
-        padding: 0px 10px;
-    }
-</style>
+		gtag('config', 'G-LVV5M06YY7');
+	</script>
+	<style>
+		.navbar {
+			position: fixed;
+			z-index: 1000;
+			left: 0;
+			right: 0;
+			padding: 0px;
+
+		}
+
+		.navbar-brand {
+			padding: 0px 10px;
+		}
+
+		.footer-ul li a {
+			text-decoration: none;
+			margin: 0px 10px;
+		}
+
+		.social-media li a {
+			text-decoration: none;
+			margin: 0px 5px;
+		}
+
+		ul li {
+			text-decoration: none;
+			display: inline;
+
+		}
+
+		@media only screen and (max-width: 700px) {
+			.remove {
+				display: none;
+			}
+		}
+	</style>
 </head>
 
 <body id="body">
@@ -92,193 +122,186 @@ Fixed Navigation
 ==================================== -->
 	<header class="navigation fixed-top">
 		<!-- <div class="container"> -->
-			<!-- main nav -->
-			<nav class="navbar navbar-expand-lg navbar-ligh bg-light">
-				<!-- logo -->
-				<a class="navbar-brand d-inline-block align-top " href="{%url 'index'%}">
-					<img class="logo-defau d-none d-lg-block bg-light" src="{%static '/images/symb.jpeg'%}" alt="solvingscale.ai" title="solvingscale.ai" style="width: 40%;border-radius: 50%;" />
-				</a>
-				<!-- <a href="" class="d-none d-lg-block ml-auto"><span >SolvingScaleAI</span></a> -->
-				<!-- /logo -->
-				<button class="navbar-toggler" type="button" data-toggle="collapse" style="color:black" data-target="#navigation"
-					aria-controls="navigation" aria-expanded="false" aria-label="Toggle navigation">
-					<i class="fa fa-bars" aria-hidden="true"></i>
+		<!-- main nav -->
+		<nav class="navbar navbar-expand-lg navbar-ligh bg-light">
+			<!-- logo -->
+			<a class="navbar-brand d-inline-block align-top " href="{%url 'index'%}">
+				<img class="logo-defau d-none d-lg-block bg-light" src="{%static '/images/symb.jpeg'%}"
+					alt="solvingscale.ai" title="solvingscale.ai" style="width: 40%;border-radius: 50%;" />
+			</a>
+			<!-- <a href="" class="d-none d-lg-block ml-auto"><span >SolvingScaleAI</span></a> -->
+			<!-- /logo -->
+			<button class="navbar-toggler" type="button" data-toggle="collapse" style="color:black"
+				data-target="#navigation" aria-controls="navigation" aria-expanded="false"
+				aria-label="Toggle navigation">
+				<i class="fa fa-bars" aria-hidden="true"></i>
 
-				</button>
+			</button>
 
-				<div class="collapse navbar-collapse" id="navigation">
-					<ul class="navbar-nav ml-auto text-center camsecdemo">
-						<a href="{%url 'index'%}"><img class="logo-whi d-lg-none d-sm-block ml-auto mr-auto"
+			<div class="collapse navbar-collapse" id="navigation">
+				<ul class="navbar-nav ml-auto text-center camsecdemo">
+					<a href="{%url 'index'%}"><img class="logo-whi d-lg-none d-sm-block ml-auto mr-auto"
 							src="{%static '/images/logoblue.png'%}" style="width: 70%;" alt="logo" /></a>
 					<li class="nav-item ">
-							<a class="nav-link" href="{%url 'company'%}">Company</a>
-						</li>
-						<li class="nav-item ">
-							<a class="nav-link" href="{%url 'consulting'%}">Consulting</a>
-						</li>
-						<li class="nav-item ">
-							<a class="nav-link" href="{%url 'team'%}">Team</a>
-						</li>
-						<li class="nav-item ">
-							<a class="nav-link" href="{%url 'portfolio'%}">Career</a>
-						</li>
-						<li class="nav-item ">
-							<a class="nav-link" href="{%url 'contact'%}">Contact</a>
-						</li>
-						
-					</ul>
-				</div>
-			</nav>
-			<!-- /main nav -->
+						<a class="nav-link" href="{%url 'company'%}">Company</a>
+					</li>
+					<li class="nav-item ">
+						<a class="nav-link" href="{%url 'consulting'%}">Consulting</a>
+					</li>
+					<li class="nav-item ">
+						<a class="nav-link" href="{%url 'team'%}">Team</a>
+					</li>
+					<li class="nav-item ">
+						<a class="nav-link" href="{%url 'portfolio'%}">Career</a>
+					</li>
+					<li class="nav-item ">
+						<a class="nav-link" href="{%url 'contact'%}">Contact</a>
+					</li>
+
+				</ul>
+			</div>
+		</nav>
+		<!-- /main nav -->
 		<!-- </div> -->
 	</header>
 	<!--
 End Fixed Navigation
 ==================================== -->
 
-<section class="single-page-header">
-	<div class="container">
-		<div class="row">
+	<section class="single-page-header">
+		<div class="container">
+			<div class="row">
 				<!-- section title -->
-        <div class="col-12">
-          <div class="title text-center">
-            <h2 class="text-light" >We Are AI Based Company</h2>
-            <p class="text-light" >Solving scale AI develops innovative applications by integrating computer vision and
-				Deep Learning Models with other systems like ERP, POS, CCTV, and diagnostic
-				software to detect anomalies in production lines, analyze medical images, identify
-				products and people on social media etc</p>
-            <div class="border"></div>
-          </div>
-        </div>
-        <!-- /section title -->
+				<div class="col-12">
+					<div class="title text-center">
+						<h2 class="text-light" data-aos="fade-down" data-aos-duration="1000">We Are AI Based Company</h2>
+						<p class="text-light" data-aos="zoom-in" data-aos-duration="2000">Solving scale AI develops innovative applications by integrating computer
+							vision and
+							Deep Learning Models with other systems like ERP, POS, CCTV, and diagnostic
+							software to detect anomalies in production lines, analyze medical images, identify
+							products and people on social media etc</p>
+						<div class="border"></div>
+					</div>
+				</div>
+				<!-- /section title -->
+			</div>
 		</div>
-	</div>
-</section>
+	</section>
 
 
 	<!--
 Start About Section
 ==================================== -->
-<section class="about-2 section" id="about">
-	<div class="container">
-		<div class="row">
+	<section class="about-2 section" id="about">
+		<div class="container">
+			<div class="row">
 
-		
 
-			<div class="col-md-6">
-				<img src="{%static '/images/about/about-2.png'%}" class="img-fluid" alt="">
+
+				<div class="col-md-6">
+					<img src="{%static '/images/about/about-2.png'%}" class="img-fluid" alt="">
+				</div>
+				<div class="col-md-6">
+
+					<p data-aos="zoom-in"data-aos-duration="1000"><b data-aos="fade-down" data-aos-duration="1000">In Healthcare:</b> We have developed a non-contact based system to measure Heart
+						Rate: a real-time application using camera ,Our model helps us to extract heart rate
+						information from facial skin color variation caused by blood circulation <br><br>
+
+						<b>In Retail : </b> On inventory Management for a client based out of australia , we have
+						customized a model to augment the data which was converted from 10000 images to
+						100000 images and finally got the accuracy of 98% as well as detection. <br><br>
+
+						<b>Helmsman security :</b>
+						The safety of ships depends upon the alertness of a helmsman, a person who steers a
+						ship. Here, the proximity of helmsman and the ship’s steers is calculated, if it is not in
+						the range then an alarm signal is generated. <br><br>
+
+						<b>Customized solutions :</b>
+						we have developed and deployed a customized offering to a client for a online clothing
+						company ,in order to find the clothing key points and finding the distance between them
+						such as the width of the waist, shoulder to waist distance of cloth, height of jeans, pants.</p>
+				</div>
+			</div> <!-- End row -->
+		</div> <!-- End container -->
+	</section> <!-- End section -->
+<br>
+	<footer class="remove">
+		<div class="row" style="margin-left:  0px; margin-right:0px">
+			<div class="col-md-3">
+				<img src="{%static '/images/logoblue.png'%}" width="150" alt="solvingscale.ai">
 			</div>
 			<div class="col-md-6">
-				
-				<p><b>In Healthcare:</b> We have developed a non-contact based system to measure Heart
-					Rate: a real-time application using camera ,Our model helps us to extract heart rate
-					information from facial skin color variation caused by blood circulation <br><br>
-					
-					<b>In Retail : </b> On inventory Management for a client based out of australia , we have
-					customized a model to augment the data which was converted from 10000 images to
-					100000 images and finally got the accuracy of 98% as well as detection. <br><br>
-					
-					<b>Helmsman security :</b>
-					The safety of ships depends upon the alertness of a helmsman, a person who steers a
-					ship. Here, the proximity of helmsman and the ship’s steers is calculated, if it is not in
-					the range then an alarm signal is generated. <br><br>
-					
-					<b>Customized solutions :</b>
-					we have developed and deployed a customized offering to a client for a online clothing
-					company ,in order to find the clothing key points and finding the distance between them
-					such as the width of the waist, shoulder to waist distance of cloth, height of jeans, pants.</p>
+				<ul class="footer-ul">
+					<li>
+						<a href="{%url 'company'%}">Company </a>
+					</li>
+					<li>
+						<a href="{%url 'consulting'%}">Consulting </a>
+					</li>
+					<li>
+						<a href="{%url 'team'%}">Team </a>
+					</li>
+					<li>
+						<a href="{%url 'portfolio'%}">Career </a>
+					</li>
+					<li>
+						<a href="{%url 'contact'%}">Contact </a>
+					</li>
+				</ul>
 			</div>
-		</div> <!-- End row -->
-	</div> <!-- End container -->
-</section> <!-- End section -->
-
-
-<footer id="footer" class="bg-one">
-
-
-	<nav class="navbar navbar-expand-lg navbar-light bg-light sticky-bottom">
-		<a class="navbar-brand" href="#">
-			
-			<img class="logo-defau d-none d-lg-block bg-light" src="{%static '/images/logoblue.png'%}" alt="logo" width="150"
-				height="30" class="d-inline-block align-top" alt="" loading="lazy" />
-		</a>
-		<div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-			<!-- <a class="navbar-brand" href="#">Hidden brand</a> -->
-			<ul class="navbar-nav mr-auto mt-2 mt-lg-0 ml-auto">
-				<li class="nav-item active">
-					<a class="nav-link" href="{%url 'company'%}">Company </a>
-				</li>
-				<li class="nav-item active">
-					<a class="nav-link" href="{%url 'consulting'%}">Consulting </a>
-				</li>
-				<li class="nav-item active">
-					<a class="nav-link" href="{%url 'team'%}">Team </a>
-				</li>
-				<li class="nav-item active">
-					<a class="nav-link" href="{%url 'portfolio'%}">Career </a>
-				</li>
-				<li class="nav-item active">
-					<a class="nav-link" href="{%url 'contact'%}">Contact </a>
-				</li>
-				<!-- <li class="nav-item active">
-		<a class="nav-link" href="#">SignIn </a>
-	  </li> -->
-			</ul>
-			<ul class="navbar-nav mt-2 mt-lg-0 ml-auto">
-				<li class="nav-item ">
-					<a class="nav-link" href="https://www.facebook.com/Solving-Scale-AI-100840541958369"><i class="fa fa-facebook-f"></i></a>
-				</li>
-				<li class="nav-item ">
-					<a class="nav-link" href="https://www.linkedin.com/company/solvingscale-ai/"><i class="fa fa-linkedin"></i></a>
-				</li>
-				<li class="nav-item ">
-					<a class="nav-link" href="https://twitter.com/AiScale"><i class="	fa fa-twitter"></i></a>
-				</li>
-				<li class="nav-item ">
-					<a class="nav-link" href="https://www.instagram.com/solvingscale.ai/"><i class="	fa fa-instagram"></i></a>
-				</li>
-				
-			</ul>
+			<div class="col-md-3">
+				<ul class="social-media">
+					<li><a href="https://www.facebook.com/Solving-Scale-AI-100840541958369"><i class="fa fa-facebook-f" style="color: rgb(104, 100, 100);"></i></a></li>
+					<li><a href="https://www.linkedin.com/company/solvingscale-ai/"><i class="fa fa-linkedin"
+								style="color: rgb(104, 100, 100);"></i></a></li>
+					<li><a href="https://twitter.com/AiScale"><i class="fa fa-twitter"
+								style="color: rgb(104, 100, 100);"></i></a></li>
+					<li><a href="https://www.instagram.com/solvingscale.ai/"><i class="fa fa-instagram"
+								style="color: rgb(104, 100, 100);"></i></a></li>
+				</ul>
+			</div>
 		</div>
-	</nav>
-</footer>
+	</footer>
 
 
-<!-- end Footer Area
+	<!-- end Footer Area
 ========================================== -->
 
 
 
-<!-- 
+	<!-- 
 Essential Scripts
 =====================================-->
-<!-- Main jQuery -->
-<script src="{%static '/plugins/jquery/jquery.min.js'%}"></script>
-<!-- Google Map -->
-<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu5nZKbeK-WHQ70oqOWo-_4VmwOwKP9YQ"></script> -->
-<!-- <script src="{%static '/plugins/google-map/gmap.js'%}"></script> -->
+	<!-- Main jQuery -->
+	<script src="{%static '/plugins/jquery/jquery.min.js'%}"></script>
+	<!-- Google Map -->
+	<!-- <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBu5nZKbeK-WHQ70oqOWo-_4VmwOwKP9YQ"></script> -->
+	<!-- <script src="{%static '/plugins/google-map/gmap.js'%}"></script> -->
 
-<!-- Form Validation -->
-<!-- <script src="{%static '/plugins/form-validation/jquery.form.js'%}"></script> -->
-<!-- <script src="{%static '/plugins/form-validation/jquery.validate.min.js'%}"></script> -->
+	<!-- Form Validation -->
+	<!-- <script src="{%static '/plugins/form-validation/jquery.form.js'%}"></script> -->
+	<!-- <script src="{%static '/plugins/form-validation/jquery.validate.min.js'%}"></script> -->
 
-<!-- Bootstrap4 -->
-<script src="{%static '/plugins/bootstrap/js/bootstrap.min.js'%}"></script>
-<!-- Parallax -->
-<!-- <script src="{%static '/plugins/parallax/jquery.parallax-1.1.3.js'%}"></script> -->
-<!-- lightbox -->
-<!-- <script src="{%static '/plugins/lightbox2/dist/js/lightbox.min.js'%}"></script> -->
-<!-- Owl Carousel -->
-<!-- <script src="{%static '/plugins/slick/slick.min.js'%}"></script> -->
-<!-- filter -->
-<!-- <script src="{%static '/plugins/filterizr/jquery.filterizr.min.js'%}"></script> -->
-<!-- Smooth Scroll js -->
-<!-- <script src="{%static '/plugins/smooth-scroll/smooth-scroll.min.js'%}"></script> -->
+	<!-- Bootstrap4 -->
+	<script src="{%static '/plugins/bootstrap/js/bootstrap.min.js'%}"></script>
+	<!-- Parallax -->
+	<!-- <script src="{%static '/plugins/parallax/jquery.parallax-1.1.3.js'%}"></script> -->
+	<!-- lightbox -->
+	<!-- <script src="{%static '/plugins/lightbox2/dist/js/lightbox.min.js'%}"></script> -->
+	<!-- Owl Carousel -->
+	<!-- <script src="{%static '/plugins/slick/slick.min.js'%}"></script> -->
+	<!-- filter -->
+	<!-- <script src="{%static '/plugins/filterizr/jquery.filterizr.min.js'%}"></script> -->
+	<!-- Smooth Scroll js -->
+	<!-- <script src="{%static '/plugins/smooth-scroll/smooth-scroll.min.js'%}"></script> -->
 
-<!-- Custom js -->
-<script src="{%static '/js/script.js'%}"></script>
-<script src="{%static '/js/val.js'%}"></script>
-
+	<!-- Custom js -->
+	<script src="{%static '/js/script.js'%}"></script>
+	<script src="{%static '/js/val.js'%}"></script>
+	<script src="{%static '/js/aos.js'%}"></script>
+	<script>
+		AOS.init();
+	</script>
 </body>
 
 </html>
